--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  top_snackbar_flutter: ^2.1.1
   animated_splash_screen: ^1.3.0
   percent_indicator: ^4.2.2
   bloc: ^8.1.0
@@ -54,6 +53,7 @@ dependencies:
   clipboard: ^0.1.3
   fluttertoast: ^8.0.9
   carousel_slider: ^4.1.1
+  onboarding_screen: ^0.0.3
 
 
 dev_dependencies:
