--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   fluttertoast: ^8.0.9
   carousel_slider: ^4.1.1
   onboarding_screen: ^0.0.3
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
