--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,13 @@ dependencies:
   share_plus: ^4.4.0
   clipboard: ^0.1.3
   fluttertoast: ^8.0.9
+  swipe_deck: ^1.1.0
+  curved_carousel: ^0.0.7
   carousel_slider: ^4.1.1
   onboarding_screen: ^0.0.3
   flutter_rating_bar: ^4.0.1
+  date_picker_timeline: ^1.2.3
+  flutter_date_picker_timeline: ^0.3.3
 
 
 dev_dependencies:
