--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,11 +56,13 @@ dependencies:
   curved_carousel: ^0.0.7
   carousel_slider: ^4.1.1
   page_indicator: ^0.4.1
-  onboarding_screen: ^0.0.3
   flutter_rating_bar: ^4.0.1
+  lottie: ^1.4.3
   date_picker_timeline: ^1.2.3
   flutter_date_picker_timeline: ^0.3.3
-
+  day_night_time_picker: ^1.1.3
+  ticket_widget: ^0.0.1
+  arrow_path: ^3.0.0
 
 dev_dependencies:
   flutter_test:
