--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_date_picker_timeline: ^0.3.3
   day_night_time_picker: ^1.1.3
   ticket_widget: ^0.0.1
+  arrow_path: ^3.0.0
   webview_flutter: ^3.0.4
 
 dev_dependencies:
